T17 - Migrar Stream.collect(Collectors.toList()) para Stream.toList()